# FEUP-CAL

./: README.md  proj.tex
CAL-Quickstart/: main.cpp
CAL-Quickstart/TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex6.cpp
CAL-Quickstart/TP10/: ex2.cpp  exercises.h
CAL-Quickstart/TP2/: ex1.cpp  ex4.cpp
CAL-Quickstart/TP3/: Pontos128k  Pontos64  ex2.cpp
CAL-Quickstart/TP4/: ex4.cpp  ex6.cpp  exercises.h
CAL-Quickstart/TP5/: Graph.h  ex2.cpp  ex3.cpp  solucoes.txt
CAL-Quickstart/TP6/: TestAux.h  ex1.cpp  ex4.cpp
CAL-Quickstart/TP7/: ex1.cpp  solutions.txt
CAL-Quickstart/TP8/: Graph.h  TestAux.cpp  (+1 more)
TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  exercises.h
TP2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  exercises.h
TP3/: Pontos64k  Pontos8  ex1.cpp  ex2.cpp
TP4/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  exercises.h
practical-exercises/: CMakeLists.txt
practical-exercises/TP1/: ex4.cpp  ex5.cpp  ex7.cpp  exercises.h
practical-exercises/TP10/: ex1.cpp  ex2.cpp  text1.txt  text2.txt
practical-exercises/TP2/: ex2.cpp  ex3.cpp  exercises.h
practical-exercises/TP3/: ex1.cpp  exercises.h
practical-exercises/TP3/solutions/: Pontos16k  Pontos1k  ex2.cpp
practical-exercises/TP4/: ex1.cpp  ex2.cpp  ex3.cpp  ex5.cpp
practical-exercises/TP4/solutions/: ex2.cpp  exercises.h
practical-exercises/TP5/: Person.cpp  Person.h
practical-exercises/TP5/solutions/: Graph.h  ex2.cpp
practical-exercises/TP6/: Graph.h  MutablePriorityQueue.h  TestAux.cpp  ex2.cpp  ex3.cpp
practical-exercises/TP7/: Graph.h  MutablePriorityQueue.h  TestAux.cpp  TestAux.h  ex2.cpp
practical-exercises/TP8/: ex1.cpp
practical-exercises/TP9/: Graph.h  ex1.cpp
practical-exercises/lib/googletest-master/googlemock/: CMakeLists.txt
practical-exercises/lib/googletest-master/googlemock/include/gmock/: gmock-spec-builders.h
practical-exercises/lib/googletest-master/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-port.h
practical-exercises/lib/googletest-master/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest.cc  gtest_main.cc
tp01/: 3sum.cpp  activity_selection.cpp  change_making_bf.cpp  change_making_greedy.cpp  isCanonical.cpp  max_subarray.cpp  minimum_average_completion_time.cpp
(+18 files in other folders)
